posts are now working correctly